--- a/2. Operadores.ipynb
+++ b/2. Operadores.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyM98JpiQgAJE5O1YPEhZ1Ni",
+      "authorship_tag": "ABX9TyNW5zQLqcTnRlFn54qNB4m3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,10 +67,10 @@
         "pd.DataFrame(columns=['Operador', 'Nombre', 'Ejemplo'],\n",
         "             index=[1, 2, 3, 4, 5, 6, 7],\n",
         "             data=[['+', 'Adición', 'x + y   ,   \"texto\" + \" otro texto\"'],\n",
-        "                   ['-', 'Sustracción', 'x - y'], \n",
+        "                   ['-', 'Sustracción', 'x - y'],\n",
         "                   ['*', 'Multiplicación', 'x * y   ,   \"texto\" * 4'],\n",
         "                   ['/', 'División', 'x / y'],\n",
-        "                   ['//', 'Cociente', 'x // y'], \n",
+        "                   ['//', 'Cociente', 'x // y'],\n",
         "                   ['%', 'Módulo', 'x % y'],\n",
         "                   ['**', 'Potenciación', 'x ** y']])"
       ],
@@ -260,8 +258,8 @@
       "cell_type": "markdown",
       "source": [
         "**Número par:** <br>\n",
-        "Si un número es múltiplo de 2 es par. <br> \n",
-        "Si el **residuo** de **mod 2** es igual a 0, nuestro número será par. "
+        "Si un número es múltiplo de 2 es par. <br>\n",
+        "Si el **residuo** de **mod 2** es igual a 0, nuestro número será par."
       ],
       "metadata": {
         "id": "vWepvmMCXh64"
@@ -282,8 +280,8 @@
       "cell_type": "markdown",
       "source": [
         "**Número impar:** <br>\n",
-        "Si un número es NO es múltiplo de 2 es impar. <br> \n",
-        "Si el **residuo** de **mod 2** es diferente a 0, nuestro número será impar. "
+        "Si un número es NO es múltiplo de 2 es impar. <br>\n",
+        "Si el **residuo** de **mod 2** es diferente a 0, nuestro número será impar."
       ],
       "metadata": {
         "id": "6caa75A5Xj6T"
@@ -292,7 +290,7 @@
     {
       "cell_type": "code",
       "source": [
-        "print(3 % 2)"
+        "print(517 % 2)"
       ],
       "metadata": {
         "id": "htEzZjpXXqAv"
@@ -311,12 +309,24 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "a = 2\n",
+        "print(a ** 2)  # 2 * 2"
+      ],
+      "metadata": {
+        "id": "DuK1XKE0wDxX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "As2v6Ld7MIjj"
       },
       "source": [
         "a = 2\n",
-        "print(a ** 3) # 2 * 2 * 2"
+        "print(a ** 3)  # 2 * 2 * 2"
       ],
       "execution_count": null,
       "outputs": []
@@ -359,7 +369,7 @@
       "source": [
         "## Orden de evaluación\n",
         "\n",
-        "Al igual que en matematicas, al evaluarse una operación, se debe considerar la prioridad de las operaciones. "
+        "Al igual que en matemáticas, al evaluarse una operación, se debe considerar la prioridad de las operaciones."
       ],
       "metadata": {
         "id": "M0v4e_UtWymS"
@@ -408,10 +418,10 @@
         "pd.DataFrame(columns=['Operador', 'Nombre', 'Ejemplo'],\n",
         "             index=[1, 2, 3, 4, 5, 6, 7],\n",
         "             data=[['=', 'igual a', 'mi_variable = 150'],\n",
-        "                   ['+=', 'más igual a', 'x = x + 4'], \n",
+        "                   ['+=', 'más igual a', 'x = x + 4'],\n",
         "                   ['-=', 'menos igual a', 'x = x - 4'],\n",
         "                   ['*=', 'multipliación igual a', 'x = x * 4'],\n",
-        "                   ['/=', 'división igual a', 'x = x / 4'], \n",
+        "                   ['/=', 'división igual a', 'x = x / 4'],\n",
         "                   ['%=', 'módulo igual a', 'x %= y'],\n",
         "                   ['**=', 'exponenciación igual a', 'x **= y']])"
       ],
@@ -515,11 +525,23 @@
         "contador = 1\n",
         "for n in range(10):\n",
         "  print(contador)\n",
-        "  contador = contador + 1 # Opción 1\n",
-        "  # contador += 1 # Opción 2\n",
-        "  \n",
-        "# Recuerda comentar una de las dos opciones para ejecutar el código."
+        "  contador = contador + 1 # Opción 1"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Ejemplo\n",
+        "contador = 1\n",
+        "for n in range(10):\n",
+        "  print(contador)\n",
+        "  contador += 1 # Opción 2"
+      ],
+      "metadata": {
+        "id": "n5QFNpmHwnFA"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -641,7 +663,7 @@
       },
       "source": [
         "x = 6\n",
-        "x *= 4 \n",
+        "x *= 4\n",
         "print(x)"
       ],
       "execution_count": null,
@@ -706,7 +728,7 @@
         "pd.DataFrame(columns=['Operador', 'Nombre', 'Ejemplo'],\n",
         "             index=[1, 2, 3, 4, 5, 6],\n",
         "             data=[['==', 'Igual que', 'x == y'],\n",
-        "                   ['!=', 'No es igual que', 'x != y'], \n",
+        "                   ['!=', 'No es igual que', 'x != y'],\n",
         "                   ['>', 'Mayor que', 'x > y'],\n",
         "                   ['>=', 'Mayor o igual que', 'x >= y'],\n",
         "                   ['<', 'Menor que', 'x < y'],\n",
@@ -915,7 +937,7 @@
       },
       "source": [
         "# 2 != 3\n",
-        "print(a != b) "
+        "print(a != b)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1485,7 +1507,7 @@
       "source": [
         "# 1.4 Operadores Lógicos\n",
         "\n",
-        "Nos ayudan a aevaluar múltiples condiciones. \n",
+        "Nos ayudan a aevaluar múltiples condiciones.\n",
         "\n",
         "**Palabras clave:** `and`, `or` y `not`"
       ],
@@ -1506,7 +1528,7 @@
         "df = pd.DataFrame(columns=['Operador', 'Descripción', 'Ejemplo'],\n",
         "             index=[1, 2, 3],\n",
         "             data=[['and', 'True si ambas evaluaciones son True', 'True and True == a True \\\\n True and False == False'],\n",
-        "                   ['or', 'True si alguna evaluación es True', 'True or True == False \\n True or False == True'], \n",
+        "                   ['or', 'True si alguna evaluación es True', 'True or True == False \\n True or False == True'],\n",
         "                   ['not', 'False si alguna evaluación es False', 'True or False == False, \\n False or False']])\n",
         "\n",
         "pretty_print(df)"
